# Strag-IA

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.pdfcheck  pyproject.toml
app/: cell_map.py  config.py  domain.py  drive_io.py  email_smtp.py  gemini.py  google_clients.py  hallazgos.py  main.py  notificaciones.py  parser.py  pipeline.py  render.py  reporte.py  scoring.py  security.py  sheets_adapter.py  wiring.py
apps_script/: Codigo.gs  README.md  appsscript.json
docs/: ARCHITECTURE.md  BRIEF.md  PLAN.md
scripts/: crear_carpeta_resultados.py  obtener_refresh_token.py  render_sample.py
tests/: test_bandas.py  test_cell_map.py  test_config.py  test_drive_io.py  test_email_smtp.py  test_enriquecer.py  test_gemini.py  test_generar_hallazgos.py  test_notificaciones.py  test_parser.py  test_parser_contrato.py  test_pipeline.py  test_preseleccion.py  test_render_html.py  test_render_pdf.py  test_reporte.py  test_scoring.py  test_security.py  test_sheets_adapter.py  test_validacion.py  test_validar_salida.py  test_webhook.py  test_wiring.py  vase.py
